fix meta data for nextjs 13

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,18 +1,18 @@
-@keyframes my-pulse {
-    0% {
-      transform: scale(1);
-      opacity: 1;
-    }
-    50% {
-      transform: scale(0.96);
-      opacity: 1;
-    }
-    100% {
-      transform: scale(1);
-      opacity: 1;
-    }
-  }
-  
-  .my-pulse {
-    animation: my-pulse 1.2s infinite;
-  }
+@keyframes pulse {
+	0% {
+		transform: scale(1);
+		opacity: 1;
+	}
+	50% {
+		transform: scale(0.96);
+		opacity: 1;
+	}
+	100% {
+		transform: scale(1);
+		opacity: 1;
+	}
+}
+
+.pulse {
+	animation: my-pulse 1.2s infinite;
+}
